Add local ts-node dev setup

--- a/package.json
+++ b/package.json
@@ -3,8 +3,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start": "ts-node index.ts"
+  },
   "dependencies": {
     "@types/ws": "^4.0.0",
     "ws": "^4.0.0"
+  },
+  "devDependencies": {
+    "ts-node": "^7.0.1",
+    "typescript": "^3.2.1"
   }
 }
