Can run reducer

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node index.ts"
+    "start": "ts-node index.ts",
+    "start-reducer": "ts-node index-reducer.ts"
   },
   "dependencies": {
     "@types/ws": "^4.0.0",
