--- a/package.json
+++ b/package.json
@@ -9,10 +9,8 @@
   },
   "dependencies": {
     "@types/ws": "^4.0.0",
-    "ws": "^4.0.0"
-  },
-  "devDependencies": {
     "ts-node": "^7.0.1",
-    "typescript": "^3.2.1"
+    "typescript": "^3.2.1",
+    "ws": "^4.0.0"
   }
 }
